tests/grammar/types/var_type_annotation/type_fail_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:1:1
  |
1 | _name: int = "Green"
  | ^ expected int, got str(Green)
  |